Bug 185647 - Setting pseudo class of a closed window crashes [@ inLayoutUtils::GetEventStateManagerFor] r=timeless sr=tor